added some headings

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>My first webpage</title>
+<title>My favorite things.</title>
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<p>Hello, world!</p> 
-<p>Welcome to my first web page!</p>  
+<h>Hello, world!</h> 
+<h2>My Fisrt Project.</h2>
+<h1>Evans Favourite Things.</h1>
+<p>explore Evans!</p>  
+<img height="150" src="https://images.pexels.com/photos/50579/africa-elephant-words-animal-50579.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+<img alt="This is one of Evans best Animals"><p></p>
+<h><strong>My favorite things.</strong></h>
+<ul> 
+<li>Football.</li>
+<li>Hiking.</li>
+<li>Swimming.</li>
+<li>visiting places.</li>
+<li>Watching Movies.</li>
+<li>Reading Novels.</li>
+</ul>
 </body>
 </html>
