--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
 <li>Watching Movies.</li>
 <li>Reading Novels.</li>
 </ul>
+<p>Here are somethings am going to learn in coding.</p>
+<ol>
+<li>HTML</li>  
+<li>CSS</li>  
+<li>JavaScript</li>
+<li>And alot more!</li>
+</ol>
 </body>
 </html>
